Add publish script for java and kotlin

--- a/java/Makefile
+++ b/java/Makefile
@@ -8,3 +8,7 @@ init:
 proto-gen: 
 	@echo "Generating Protobuf files"
 	./gradlew cleanProto generateProto
+
+publish:
+    @echo "Publish Protobuf Artifacts"
+    ./gradlew publish
