--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terra-money/terra.proto",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "JS and TS types relating to Protocol Buffers used by Terra project",
   "contributors": [
     "Yun Yeo <YunSuk-Yeo@users.noreply.github.com>"
@@ -30,6 +30,7 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.3.7",
     "long": "^4.0.0",
     "protobufjs": "~6.11.2"
   },
@@ -38,7 +39,6 @@
     "@types/node": "^15.6.2",
     "prettier": "^2.3.0",
     "ts-proto": "^1.82.5",
-    "typescript": "~4.0",
-    "@grpc/grpc-js": "^1.3.7"
+    "typescript": "~4.0"
   }
 }
