--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terra-money/terra.proto",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "JS and TS types relating to Protocol Buffers used by Terra project",
   "contributors": [
     "Yun Yeo <YunSuk-Yeo@users.noreply.github.com>"
@@ -30,11 +30,13 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.3.7",
+    "@improbable-eng/grpc-web": "^0.14.1",
+    "google-protobuf": "^3.17.3",
     "long": "^4.0.0",
     "protobufjs": "~6.11.2"
   },
   "devDependencies": {
+    "@types/google-protobuf": "^3.15.5",
     "@types/long": "^4.0.1",
     "@types/node": "^15.6.2",
     "prettier": "^2.3.0",
