--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -17,19 +17,11 @@ license = "MIT"
 packages = [{ include = "terra_proto" }]
 readme = "README.md"
 repository = "https://github.com/terra-money/terra.proto"
-version = "1.0.0-beta1"
+version = "1.0.1"
 
 [tool.poetry.dependencies]
-aiohttp = "^3.7.3"
-attrs = "^20.3.0"
-bech32 = "^1.2.0"
-bip32utils = "^0.3.post4"
-ecdsa = "^0.16.1"
-mnemonic = "^0.19"
 python = "^3.7"
-wrapt = "^1.12.1"
-nest-asyncio = "^1.5.1"
-protobuf = "^3.17.3"
+betterproto = "2.0.0b4"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
@@ -50,6 +42,7 @@ sphinx-rtd-theme = "^0.5.1"
 sphinx-autodoc-typehints = "^1.11.1"
 sphinx-autobuild = "^2020.9.1"
 uvloop = "^0.14.0"
+attrs = "20.3.0"
 
 [tool.pytest.ini_options]
 addopts = "-ra -q"
