--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -17,7 +17,7 @@ license = "MIT"
 packages = [{ include = "terra_proto" }]
 readme = "README.md"
 repository = "https://github.com/terra-money/terra.proto"
-version = "1.0.1"
+version = "1.1.0b1"
 
 [tool.poetry.dependencies]
 python = "^3.7"
