--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -23,6 +23,7 @@ version = "2.0.0"
 [tool.poetry.dependencies]
 python = "^3.7"
 betterproto = "2.0.0b4"
+MarkupSafe = "2.0.1"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
