--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -18,7 +18,7 @@ license = "MIT"
 packages = [{ include = "terra_proto" }]
 readme = "README.md"
 repository = "https://github.com/terra-money/terra.proto"
-version = "2.1.0b1"
+version = "2.1.0"
 
 [tool.poetry.dependencies]
 python = "^3.7"
