--- a/js/package.json
+++ b/js/package.json
@@ -27,6 +27,7 @@
   "scripts": {
     "format": "prettier --write --loglevel warn \"./src/**/*.ts\"",
     "build": "rm -rf ./build && tsc --module commonjs && ./scripts/prepare.sh",
+    "codegen": "rm -rf ./src && ./scripts/codegen.js && npm run format",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
@@ -36,11 +37,11 @@
     "protobufjs": "~6.11.2"
   },
   "devDependencies": {
+    "@osmonauts/telescope": "^0.73.1",
     "@types/google-protobuf": "^3.15.5",
     "@types/long": "^4.0.1",
     "@types/node": "^15.6.2",
     "prettier": "^2.3.0",
-    "ts-proto": "^1.82.5",
     "typescript": "~4.0"
   }
 }
