--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "terrad"]
 	path = terrad
 	url = git@github.com:terra-money/core.git
+[submodule "allianced"]
+	path = allianced
+	url = git@github.com:terra-money/alliance.git
