--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terra-money/terra.proto",
-  "version": "2.2.0-beta.2",
+  "version": "2.2.0-beta.3",
   "description": "JS and TS types relating to Protocol Buffers used by Terra project",
   "contributors": [
     "Yun Yeo <YunSuk-Yeo@users.noreply.github.com>"
@@ -14,6 +14,7 @@
     "access": "public"
   },
   "files": [
+    "alliance/",
     "confio/",
     "cosmos/",
     "cosmos_proto/",
