--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,20 +1,6 @@
-[package]
-name = "proto-build"
-version = "0.1.0"
-authors = ["emidev98"]
-edition = "2021"
-publish = false
-
-
-[dependencies]
-prost = "0.11"
-prost-build = "0.11"
-tonic = "0.8"
-tonic-build = "0.8"
-regex = "1"
-walkdir = "2"
-
-
-[[bin]]
-name = "main"
-path = "src/main.rs"
+[workspace]
+resolver = "2"
+members = [
+    "lib",
+    "src"
+]
