--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "terra-classic-proto"
-authors = ["Geoff Munn<geoff@zimoobo.com>"]
+authors = ["Geoff Munn <geoff@zimoobo.com>"]
 classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
@@ -18,7 +18,7 @@ license = "MIT"
 packages = [{ include = "terra_proto" }]
 readme = "README.md"
 repository = "https://github.com/geoffmunn/terra.proto"
-version = "3.0.1.classic.beta1"
+version = "3.0.1"
 
 [tool.poetry.dependencies]
 python = "^3.7"
@@ -56,4 +56,4 @@ extend-ignore = "E203"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.3.0"]
