--- a/js/package.json
+++ b/js/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@improbable-eng/grpc-web": "^0.14.1",
+    "browser-headers": "^0.4.1",
     "google-protobuf": "^3.17.3",
     "long": "^4.0.0",
     "protobufjs": "~6.11.2"
