--- a/.gitmodules
+++ b/.gitmodules
@@ -1,23 +1,20 @@
 [submodule "cosmos-sdk"]
 	path = cosmos-sdk
 	url = https://github.com/terra-money/cosmos-sdk.git
-	branch = release/v0.46.11-terra.rc.5
+	branch = upgrade/v0.47.x
 [submodule "ibc-go"]
 	path = ibc-go
 	url = https://github.com/cosmos/ibc-go.git
-	branch = release/v6.1.x
+	branch = release/v7.3.x
 [submodule "alliance"]
 	path = alliance
 	url = https://github.com/terra-money/alliance.git
-	branch = release/v0.1.x
+	branch = release/v0.3.x
 [submodule "terra"]
 	path = terra
 	url = https://github.com/terra-money/core
-	branch = upgrade/cosmos46
+	branch = upgrade/2.5
 [submodule "wasmd"]
 	path = wasmd
-	url = https://github.com/notional-labs/wasmd
-	branch = release/v0.30.0-sdk-v0.46.x
-[submodule "jax"]
-	path = jax
-	url = https://github.com/terra-money/jax
+	url = https://github.com/cosmwasm/wasmd
+	branch = release/v0.40.x
