--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terra-money/terra.proto",
-  "version": "4.0.0-beta.2",
+  "version": "4.0.0-beta.3",
   "description": "JS and TS types relating to Protocol Buffers used by Terra project",
   "contributors": [
     "Yun Yeo <YunSuk-Yeo@users.noreply.github.com>"
@@ -24,6 +24,8 @@
     "google/",
     "ibc/",
     "jax/",
+    "osmosis/",
+    "pob/",
     "router/",
     "tendermint/",
     "*.md",
